# esp32-wroom-kws

./: README.md
mini-example-project/: sdkconfig  sdkconfig.old
mini-example-project/main/: CMakeLists.txt  main.cc  model.cc  model.h
